@@ -5,6 +5,7 @@ openbve (1.0.2.0-0buntu1) unreleased; urgency=low
   * pass '/fhs' from the mono wrapper instead of hardcoding
   * overload GetSettingsFolder() to create the config directory before return it
   * Load first-use Keyboard mapping from GetDataFolder("Controls") not ~/
+  * Default first-use game data from /usr/share/games/bve/{Railway/Route,Train}
 
  -- Paul Sladen <ubuntu@paul.sladen.org>  Sun, 05 Apr 2009 12:33:10 +0000
 
